// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValueInput: index dropdown render options 1`] = `
<select
  name="denomination"
  onChange={[Function]}
  required={true}
  type="select"
  value="wei"
>
  <option
    value="wei"
  >
    wei
  </option>
  <option
    value="babbage"
  >
    babbage
  </option>
  <option
    value="szabo"
  >
    szabo
  </option>
  <option
    value="finney"
  >
    finney
  </option>
  <option
    value="ether"
  >
    ether
  </option>
  <option
    value="einstein"
  >
    einstein
  </option>
</select>
`;

exports[`ValueInput: index render component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ValueInput
    name="block"
    placeholder="block"
    title="block"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-control-group"
        >
          <div
            className="pt-select"
          >
            <select
              name="denomination"
              onChange={[Function]}
              required={true}
              type="select"
              value="wei"
            >
              <option
                value="wei"
              >
                wei
              </option>
              <option
                value="babbage"
              >
                babbage
              </option>
              <option
                value="szabo"
              >
                szabo
              </option>
              <option
                value="finney"
              >
                finney
              </option>
              <option
                value="ether"
              >
                ether
              </option>
              <option
                value="einstein"
              >
                einstein
              </option>
            </select>
          </div>
          <div
            className="pt-fill"
          >
            <input
              className="pt-input pt-fill"
              dir="auto"
              id="input-b"
              name="block"
              onChange={[Function]}
              placeholder="block"
              required={true}
              title="block"
              type="text"
              value={0}
            />
          </div>
        </div>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="pt-select"
            >
              <select
                name="denomination"
                onChange={[Function]}
                required={true}
                type="select"
                value="wei"
              >
                <option
                  value="wei"
                >
                  wei
                </option>
                <option
                  value="babbage"
                >
                  babbage
                </option>
                <option
                  value="szabo"
                >
                  szabo
                </option>
                <option
                  value="finney"
                >
                  finney
                </option>
                <option
                  value="ether"
                >
                  ether
                </option>
                <option
                  value="einstein"
                >
                  einstein
                </option>
              </select>
            </div>,
            <div
              className="pt-fill"
            >
              <input
                className="pt-input pt-fill"
                dir="auto"
                id="input-b"
                name="block"
                onChange={[Function]}
                placeholder="block"
                required={true}
                title="block"
                type="text"
                value={0}
              />
            </div>,
          ],
          "className": "pt-control-group",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <select
                name="denomination"
                onChange={[Function]}
                required={true}
                type="select"
                value="wei"
              >
                <option
                  value="wei"
                >
                  wei
                </option>
                <option
                  value="babbage"
                >
                  babbage
                </option>
                <option
                  value="szabo"
                >
                  szabo
                </option>
                <option
                  value="finney"
                >
                  finney
                </option>
                <option
                  value="ether"
                >
                  ether
                </option>
                <option
                  value="einstein"
                >
                  einstein
                </option>
              </select>,
              "className": "pt-select",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    value="wei"
                  >
                    wei
                  </option>,
                  <option
                    value="babbage"
                  >
                    babbage
                  </option>,
                  <option
                    value="szabo"
                  >
                    szabo
                  </option>,
                  <option
                    value="finney"
                  >
                    finney
                  </option>,
                  <option
                    value="ether"
                  >
                    ether
                  </option>,
                  <option
                    value="einstein"
                  >
                    einstein
                  </option>,
                ],
                "name": "denomination",
                "onChange": [Function],
                "required": true,
                "type": "select",
                "value": "wei",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "wei",
                  "nodeType": "host",
                  "props": Object {
                    "children": "wei",
                    "value": "wei",
                  },
                  "ref": null,
                  "rendered": "wei",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "babbage",
                  "nodeType": "host",
                  "props": Object {
                    "children": "babbage",
                    "value": "babbage",
                  },
                  "ref": null,
                  "rendered": "babbage",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "szabo",
                  "nodeType": "host",
                  "props": Object {
                    "children": "szabo",
                    "value": "szabo",
                  },
                  "ref": null,
                  "rendered": "szabo",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "finney",
                  "nodeType": "host",
                  "props": Object {
                    "children": "finney",
                    "value": "finney",
                  },
                  "ref": null,
                  "rendered": "finney",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "ether",
                  "nodeType": "host",
                  "props": Object {
                    "children": "ether",
                    "value": "ether",
                  },
                  "ref": null,
                  "rendered": "ether",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "einstein",
                  "nodeType": "host",
                  "props": Object {
                    "children": "einstein",
                    "value": "einstein",
                  },
                  "ref": null,
                  "rendered": "einstein",
                  "type": "option",
                },
              ],
              "type": "select",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                className="pt-input pt-fill"
                dir="auto"
                id="input-b"
                name="block"
                onChange={[Function]}
                placeholder="block"
                required={true}
                title="block"
                type="text"
                value={0}
              />,
              "className": "pt-fill",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "pt-input pt-fill",
                "dir": "auto",
                "id": "input-b",
                "name": "block",
                "onChange": [Function],
                "placeholder": "block",
                "required": true,
                "title": "block",
                "type": "text",
                "value": 0,
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-control-group"
          >
            <div
              className="pt-select"
            >
              <select
                name="denomination"
                onChange={[Function]}
                required={true}
                type="select"
                value="wei"
              >
                <option
                  value="wei"
                >
                  wei
                </option>
                <option
                  value="babbage"
                >
                  babbage
                </option>
                <option
                  value="szabo"
                >
                  szabo
                </option>
                <option
                  value="finney"
                >
                  finney
                </option>
                <option
                  value="ether"
                >
                  ether
                </option>
                <option
                  value="einstein"
                >
                  einstein
                </option>
              </select>
            </div>
            <div
              className="pt-fill"
            >
              <input
                className="pt-input pt-fill"
                dir="auto"
                id="input-b"
                name="block"
                onChange={[Function]}
                placeholder="block"
                required={true}
                title="block"
                type="text"
                value={0}
              />
            </div>
          </div>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="pt-select"
              >
                <select
                  name="denomination"
                  onChange={[Function]}
                  required={true}
                  type="select"
                  value="wei"
                >
                  <option
                    value="wei"
                  >
                    wei
                  </option>
                  <option
                    value="babbage"
                  >
                    babbage
                  </option>
                  <option
                    value="szabo"
                  >
                    szabo
                  </option>
                  <option
                    value="finney"
                  >
                    finney
                  </option>
                  <option
                    value="ether"
                  >
                    ether
                  </option>
                  <option
                    value="einstein"
                  >
                    einstein
                  </option>
                </select>
              </div>,
              <div
                className="pt-fill"
              >
                <input
                  className="pt-input pt-fill"
                  dir="auto"
                  id="input-b"
                  name="block"
                  onChange={[Function]}
                  placeholder="block"
                  required={true}
                  title="block"
                  type="text"
                  value={0}
                />
              </div>,
            ],
            "className": "pt-control-group",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <select
                  name="denomination"
                  onChange={[Function]}
                  required={true}
                  type="select"
                  value="wei"
                >
                  <option
                    value="wei"
                  >
                    wei
                  </option>
                  <option
                    value="babbage"
                  >
                    babbage
                  </option>
                  <option
                    value="szabo"
                  >
                    szabo
                  </option>
                  <option
                    value="finney"
                  >
                    finney
                  </option>
                  <option
                    value="ether"
                  >
                    ether
                  </option>
                  <option
                    value="einstein"
                  >
                    einstein
                  </option>
                </select>,
                "className": "pt-select",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <option
                      value="wei"
                    >
                      wei
                    </option>,
                    <option
                      value="babbage"
                    >
                      babbage
                    </option>,
                    <option
                      value="szabo"
                    >
                      szabo
                    </option>,
                    <option
                      value="finney"
                    >
                      finney
                    </option>,
                    <option
                      value="ether"
                    >
                      ether
                    </option>,
                    <option
                      value="einstein"
                    >
                      einstein
                    </option>,
                  ],
                  "name": "denomination",
                  "onChange": [Function],
                  "required": true,
                  "type": "select",
                  "value": "wei",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "wei",
                    "nodeType": "host",
                    "props": Object {
                      "children": "wei",
                      "value": "wei",
                    },
                    "ref": null,
                    "rendered": "wei",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "babbage",
                    "nodeType": "host",
                    "props": Object {
                      "children": "babbage",
                      "value": "babbage",
                    },
                    "ref": null,
                    "rendered": "babbage",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "szabo",
                    "nodeType": "host",
                    "props": Object {
                      "children": "szabo",
                      "value": "szabo",
                    },
                    "ref": null,
                    "rendered": "szabo",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "finney",
                    "nodeType": "host",
                    "props": Object {
                      "children": "finney",
                      "value": "finney",
                    },
                    "ref": null,
                    "rendered": "finney",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "ether",
                    "nodeType": "host",
                    "props": Object {
                      "children": "ether",
                      "value": "ether",
                    },
                    "ref": null,
                    "rendered": "ether",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "einstein",
                    "nodeType": "host",
                    "props": Object {
                      "children": "einstein",
                      "value": "einstein",
                    },
                    "ref": null,
                    "rendered": "einstein",
                    "type": "option",
                  },
                ],
                "type": "select",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  className="pt-input pt-fill"
                  dir="auto"
                  id="input-b"
                  name="block"
                  onChange={[Function]}
                  placeholder="block"
                  required={true}
                  title="block"
                  type="text"
                  value={0}
                />,
                "className": "pt-fill",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "pt-input pt-fill",
                  "dir": "auto",
                  "id": "input-b",
                  "name": "block",
                  "onChange": [Function],
                  "placeholder": "block",
                  "required": true,
                  "title": "block",
                  "type": "text",
                  "value": 0,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`ValueInput: index render component without value 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ValueInput
    name={undefined}
    placeholder={undefined}
    title={undefined}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="pt-control-group"
        >
          <div
            className="pt-select"
          >
            <select
              name="denomination"
              onChange={[Function]}
              required={true}
              type="select"
              value="wei"
            >
              <option
                value="wei"
              >
                wei
              </option>
              <option
                value="babbage"
              >
                babbage
              </option>
              <option
                value="szabo"
              >
                szabo
              </option>
              <option
                value="finney"
              >
                finney
              </option>
              <option
                value="ether"
              >
                ether
              </option>
              <option
                value="einstein"
              >
                einstein
              </option>
            </select>
          </div>
          <div
            className="pt-fill"
          >
            <input
              className="pt-input pt-fill"
              dir="auto"
              id="input-b"
              name="value"
              onChange={[Function]}
              placeholder="Value"
              required={true}
              title="Value"
              type="text"
              value={0}
            />
          </div>
        </div>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="pt-select"
            >
              <select
                name="denomination"
                onChange={[Function]}
                required={true}
                type="select"
                value="wei"
              >
                <option
                  value="wei"
                >
                  wei
                </option>
                <option
                  value="babbage"
                >
                  babbage
                </option>
                <option
                  value="szabo"
                >
                  szabo
                </option>
                <option
                  value="finney"
                >
                  finney
                </option>
                <option
                  value="ether"
                >
                  ether
                </option>
                <option
                  value="einstein"
                >
                  einstein
                </option>
              </select>
            </div>,
            <div
              className="pt-fill"
            >
              <input
                className="pt-input pt-fill"
                dir="auto"
                id="input-b"
                name="value"
                onChange={[Function]}
                placeholder="Value"
                required={true}
                title="Value"
                type="text"
                value={0}
              />
            </div>,
          ],
          "className": "pt-control-group",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <select
                name="denomination"
                onChange={[Function]}
                required={true}
                type="select"
                value="wei"
              >
                <option
                  value="wei"
                >
                  wei
                </option>
                <option
                  value="babbage"
                >
                  babbage
                </option>
                <option
                  value="szabo"
                >
                  szabo
                </option>
                <option
                  value="finney"
                >
                  finney
                </option>
                <option
                  value="ether"
                >
                  ether
                </option>
                <option
                  value="einstein"
                >
                  einstein
                </option>
              </select>,
              "className": "pt-select",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    value="wei"
                  >
                    wei
                  </option>,
                  <option
                    value="babbage"
                  >
                    babbage
                  </option>,
                  <option
                    value="szabo"
                  >
                    szabo
                  </option>,
                  <option
                    value="finney"
                  >
                    finney
                  </option>,
                  <option
                    value="ether"
                  >
                    ether
                  </option>,
                  <option
                    value="einstein"
                  >
                    einstein
                  </option>,
                ],
                "name": "denomination",
                "onChange": [Function],
                "required": true,
                "type": "select",
                "value": "wei",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "wei",
                  "nodeType": "host",
                  "props": Object {
                    "children": "wei",
                    "value": "wei",
                  },
                  "ref": null,
                  "rendered": "wei",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "babbage",
                  "nodeType": "host",
                  "props": Object {
                    "children": "babbage",
                    "value": "babbage",
                  },
                  "ref": null,
                  "rendered": "babbage",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "szabo",
                  "nodeType": "host",
                  "props": Object {
                    "children": "szabo",
                    "value": "szabo",
                  },
                  "ref": null,
                  "rendered": "szabo",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "finney",
                  "nodeType": "host",
                  "props": Object {
                    "children": "finney",
                    "value": "finney",
                  },
                  "ref": null,
                  "rendered": "finney",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "ether",
                  "nodeType": "host",
                  "props": Object {
                    "children": "ether",
                    "value": "ether",
                  },
                  "ref": null,
                  "rendered": "ether",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "einstein",
                  "nodeType": "host",
                  "props": Object {
                    "children": "einstein",
                    "value": "einstein",
                  },
                  "ref": null,
                  "rendered": "einstein",
                  "type": "option",
                },
              ],
              "type": "select",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                className="pt-input pt-fill"
                dir="auto"
                id="input-b"
                name="value"
                onChange={[Function]}
                placeholder="Value"
                required={true}
                title="Value"
                type="text"
                value={0}
              />,
              "className": "pt-fill",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "pt-input pt-fill",
                "dir": "auto",
                "id": "input-b",
                "name": "value",
                "onChange": [Function],
                "placeholder": "Value",
                "required": true,
                "title": "Value",
                "type": "text",
                "value": 0,
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="pt-control-group"
          >
            <div
              className="pt-select"
            >
              <select
                name="denomination"
                onChange={[Function]}
                required={true}
                type="select"
                value="wei"
              >
                <option
                  value="wei"
                >
                  wei
                </option>
                <option
                  value="babbage"
                >
                  babbage
                </option>
                <option
                  value="szabo"
                >
                  szabo
                </option>
                <option
                  value="finney"
                >
                  finney
                </option>
                <option
                  value="ether"
                >
                  ether
                </option>
                <option
                  value="einstein"
                >
                  einstein
                </option>
              </select>
            </div>
            <div
              className="pt-fill"
            >
              <input
                className="pt-input pt-fill"
                dir="auto"
                id="input-b"
                name="value"
                onChange={[Function]}
                placeholder="Value"
                required={true}
                title="Value"
                type="text"
                value={0}
              />
            </div>
          </div>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="pt-select"
              >
                <select
                  name="denomination"
                  onChange={[Function]}
                  required={true}
                  type="select"
                  value="wei"
                >
                  <option
                    value="wei"
                  >
                    wei
                  </option>
                  <option
                    value="babbage"
                  >
                    babbage
                  </option>
                  <option
                    value="szabo"
                  >
                    szabo
                  </option>
                  <option
                    value="finney"
                  >
                    finney
                  </option>
                  <option
                    value="ether"
                  >
                    ether
                  </option>
                  <option
                    value="einstein"
                  >
                    einstein
                  </option>
                </select>
              </div>,
              <div
                className="pt-fill"
              >
                <input
                  className="pt-input pt-fill"
                  dir="auto"
                  id="input-b"
                  name="value"
                  onChange={[Function]}
                  placeholder="Value"
                  required={true}
                  title="Value"
                  type="text"
                  value={0}
                />
              </div>,
            ],
            "className": "pt-control-group",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <select
                  name="denomination"
                  onChange={[Function]}
                  required={true}
                  type="select"
                  value="wei"
                >
                  <option
                    value="wei"
                  >
                    wei
                  </option>
                  <option
                    value="babbage"
                  >
                    babbage
                  </option>
                  <option
                    value="szabo"
                  >
                    szabo
                  </option>
                  <option
                    value="finney"
                  >
                    finney
                  </option>
                  <option
                    value="ether"
                  >
                    ether
                  </option>
                  <option
                    value="einstein"
                  >
                    einstein
                  </option>
                </select>,
                "className": "pt-select",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <option
                      value="wei"
                    >
                      wei
                    </option>,
                    <option
                      value="babbage"
                    >
                      babbage
                    </option>,
                    <option
                      value="szabo"
                    >
                      szabo
                    </option>,
                    <option
                      value="finney"
                    >
                      finney
                    </option>,
                    <option
                      value="ether"
                    >
                      ether
                    </option>,
                    <option
                      value="einstein"
                    >
                      einstein
                    </option>,
                  ],
                  "name": "denomination",
                  "onChange": [Function],
                  "required": true,
                  "type": "select",
                  "value": "wei",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "wei",
                    "nodeType": "host",
                    "props": Object {
                      "children": "wei",
                      "value": "wei",
                    },
                    "ref": null,
                    "rendered": "wei",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "babbage",
                    "nodeType": "host",
                    "props": Object {
                      "children": "babbage",
                      "value": "babbage",
                    },
                    "ref": null,
                    "rendered": "babbage",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "szabo",
                    "nodeType": "host",
                    "props": Object {
                      "children": "szabo",
                      "value": "szabo",
                    },
                    "ref": null,
                    "rendered": "szabo",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "finney",
                    "nodeType": "host",
                    "props": Object {
                      "children": "finney",
                      "value": "finney",
                    },
                    "ref": null,
                    "rendered": "finney",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "ether",
                    "nodeType": "host",
                    "props": Object {
                      "children": "ether",
                      "value": "ether",
                    },
                    "ref": null,
                    "rendered": "ether",
                    "type": "option",
                  },
                  Object {
                    "instance": null,
                    "key": "einstein",
                    "nodeType": "host",
                    "props": Object {
                      "children": "einstein",
                      "value": "einstein",
                    },
                    "ref": null,
                    "rendered": "einstein",
                    "type": "option",
                  },
                ],
                "type": "select",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  className="pt-input pt-fill"
                  dir="auto"
                  id="input-b"
                  name="value"
                  onChange={[Function]}
                  placeholder="Value"
                  required={true}
                  title="Value"
                  type="text"
                  value={0}
                />,
                "className": "pt-fill",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "pt-input pt-fill",
                  "dir": "auto",
                  "id": "input-b",
                  "name": "value",
                  "onChange": [Function],
                  "placeholder": "Value",
                  "required": true,
                  "title": "Value",
                  "type": "text",
                  "value": 0,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
